[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
leptos = { version = "0.7.0-beta", features = ["csr", "nightly"] }
leptos_router = { version = "0.7.0-beta", features = ["nightly"] }
leptos_meta = { version = "0.7.0-beta" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "main" }
rsecret = { version = "0.1.0", path = "../secret-clients/rsecret" }
tonic-web-wasm-client = "0.5.1"
tonic = { version = "0.11.0", default-features = false }
base64 = "0.22"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"

keplr = { path = "../keplr" }
