[package]
name = "secret-leptos"
version = "0.1.0"
edition = "2021"

[build]
target = "wasm32-unknown-unknown"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binaty size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1

[dependencies]
# Leptos official
leptos = { version = "0.7.0-beta", git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7", features = [
  "csr",
  "nightly",
] }
leptos_router = { version = "0.7.0-beta", git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7", features = [
  "nightly",
] }
leptos_meta = { version = "0.7.0-beta", git = "https://github.com/leptos-rs/leptos", branch = "leptos_0.7" }

# Leptos extenstions and related
# leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "leptos-0.7" }
# codee = { version = "0.1", features = [
#   "json_serde",
#   "msgpack_serde",
#   "base64",
#   "prost",
# ] }
# leptonic = { git = "https://github.com/lpotthast/leptonic.git", branch = "main" }
# thaw = { version = "0.4.0-alpha", git = "https://github.com/thaw-ui/thaw.git", branch = "thaw/fluent", features = [
#   "csr",
#   "nightly",
# ] }

# gRPC
tonic = { version = "0.11.0", default-features = false }

# Web support
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
# gloo-net = "0.6"
# gloo-storage = "0.3"

# Wasm support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
tonic-web-wasm-client = "0.5.1"
send_wrapper = { version = "0.6.0", features = ["futures"] }

# Classic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1.0"
# anyhow = "1.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3"
tracing-subscriber-wasm = "0.1"

# Local
keplr = { path = "../keplr" }
rsecret = { path = "../secret-clients/rsecret" }
secretrs = { version = "0.1" }
